# Rust-Audio-Plugins

./: Cargo.toml  README.md
examples/: compressor.rs  multi_synth.rs  reverb.rs  saturate.rs  sine_synth.rs  slew.rs  test_plugin.rs  wav_sampler.rs
plotting/: plottest.py
