[package]
name = "vsts"
version = "0.0.1"
authors = ["DGriffin91"]

description = "Some vst plugin experiments"

readme = "README.md"

license = "MIT"
keywords = ["vst", "vst2", "plugin"]

autoexamples = false

[dependencies]
vst = "0.2.1"
time = "0.2.23"


[dev-dependencies]

dasp = {git = "https://github.com/ollpu/dasp", branch = "master", features = ["all"]}

find_folder = "0.3"
hound = "3"

log = "0.4"
log-panics = "2"
simplelog = "0.8"
dirs = "3"
ringbuf = "0.2"

dsp-util = {git = "https://github.com/DGriffin91/rust-dsp-util", branch = "main"}

[[example]]
name = "sine_synth"
crate-type = ["cdylib"]

[[example]]
name = "gain_effect"
crate-type = ["cdylib"]

[[example]]
name = "multi_synth"
crate-type = ["cdylib"]

[[example]]
name = "saturate"
crate-type = ["cdylib"]

[[example]]
name = "compressor"
crate-type = ["cdylib"]

[[example]]
name = "slew"
crate-type = ["cdylib"]

[[example]]
name = "reverb"
crate-type = ["cdylib"]

[[example]]
name = "test_plugin"
crate-type = ["cdylib"]

[[example]]
name = "wav_sampler"
crate-type = ["cdylib"]